# pub-crawls

./: .gitignore  README.md  docker-compose.build.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml
.github/workflows/: deploy.yml  pr.yml
api/: .gitignore  Dockerfile.data  Dockerfile.dev  Dockerfile.prod  populate.sh  pyproject.toml  venues.json
api/src/api/: emails.py  genapi.py  lifespan.py  main.py  populate.py  utils.py
api/src/api/templates/: forgot-password.txt  verify.txt
api/src/api/users/: auth.py  db.py  manager.py  schemas.py
client/: .gitignore  Dockerfile.dev  Dockerfile.prod  entrypoint.dev.sh  next.config.ts  package.json  tsconfig.json
client/src/app/: BottomBar.tsx  Content.tsx  TopBar.tsx  VenueMap.tsx  api.ts  globals.css  interfaces.ts  layout.tsx  manifest.ts  page.tsx  utils.ts
client/src/app/api/: client.ts
client/src/app/components/: LargeVenueMap.tsx  Loader.tsx  Pin.tsx  SmallVenueMap.tsx  VenueMap.tsx  VisitCard.tsx  forms.tsx
client/src/app/context/: client.tsx  crawls.tsx  user.tsx  userSummary.tsx  venue.tsx  venues.tsx
client/src/app/crawls/: page.tsx
client/src/app/follows/: page.tsx
codegen/: Dockerfile
db/code/functions/: 2_functions.sql  all.sql
db/code/types/: 1_types.sql  all.sql
db/code/views/: 0_crawl_visit.sql  0_crawl_visit_view.sql  crawl_visit_count_view.sql  user_crawl_favourite.sql  user_favourite.sql  visit_view.sql
db/data/: 45-generalise.sql
db/schema/: all.sql
openapi/: Dockerfile  Dockerfile.dev  Dockerfile.prod  dev.js  package.json  prod.js
(+18 files in other folders)
