[project]
name = "api"
version = "0.1.0"
description = ""
authors = [
    {name = "George Kaye",email = "georgejkaye@gmail.com"}
]
license = {text = "GPL-v3.0-or-later"}
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "fastapi-users[sqlalchemy] (>=15.0.4,<16.0.0)",
    "psycopg (>=3.3.3,<4.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]

[dependency-groups]
dev = [
    "ruff (>=0.15.5,<0.16.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "types-jinja2 (>=2.11.9,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
